Minor changes
- add swaggerseed to populate tags description
- tidied up logging
- fixed products_test for new interface
