# swagger.json
@@ -29,7 +29,7 @@
       "get": {
         "description": "Returns a list of all products in the database.",
         "tags": [
-          "products"
+          "Products"
         ],
         "summary": "List all products",
         "operationId": "listProducts",
@@ -42,7 +42,7 @@
       "post": {
         "description": "Adds a product to the database.",
         "tags": [
-          "products"
+          "Products"
         ],
         "summary": "Add a product",
         "operationId": "addProduct",
@@ -77,7 +77,7 @@
       "put": {
         "description": "Updates product {id} in the database. Will fail if {id} does not exist.",
         "tags": [
-          "products"
+          "Products"
         ],
         "summary": "Update a product",
         "operationId": "updateProduct",
@@ -119,7 +119,7 @@
       "delete": {
         "description": "Deletes a product from the database based on {id}.",
         "tags": [
-          "products"
+          "Products"
         ],
         "summary": "Delete product for a given {id}",
         "operationId": "deleteProduct",
@@ -250,5 +250,11 @@
         "$ref": "#/definitions/ValidationError"
       }
     }
-  }
+  },
+  "tags": [
+    {
+      "description": "Methods to interact with the products database.",
+      "name": "Products"
+    }
+  ]
 }
